<resources>
    <string name="app_name">Kalkulator sederhana</string>
    <string name="kali">Kali</string>
    <string name="bagi">Bagi</string>
    <string name="tambah">Tambah</string>
    <string name="sisa_bagi">Sisa Bagi</string>
    <string name="kurang">Kurang</string>
    <string name="masukkan_nilai_1">Masukkan nilai 1</string>
    <string name="masukkan_nilai_2">Masukkan nilai 2</string>
    <string name="nilai_1">Nilai 1 :</string>
    <string name="nilai_2">Nilai 2 :</string>
    <string name="hasil">Hasil :</string>
    <string name="kalkulator_sederhana">KALKULATOR SEDERHANA</string>
</resources>